Test/error/test-def-5.cmm
int main()
{
    int a = min(1, 2;
    int x;
    x = 1 ++ 2;
    a = 1;
    return a
}
